Doc/force-app/main/default/objects/SKU_Config_Staging_Entry__c/SKU_Config_Staging_Entry__c.object-meta.xml
<CustomObject>
    <description>Child staging entry — one per config data change (DML operation). Master-Detail to the parent SKU_Config_Staging__c session record.</description>
    <label>SKU Config Staging Entry</label>
    <nameField>
        <displayFormat>SCE-{0000000}</displayFormat>
        <label>Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Config Staging Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>