Doc/force-app/main/default/objects/SKU_Config_Staging_Entry__c/fields/Gearset_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Gearset_External_Id__c</fullName>
    <description>GearsetExternalId__c value from the source record. Used in the generated file name for the .gs.json file.</description>
    <label>Gearset External ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>