Doc/force-app/main/default/objects/SKU_Config_Staging_Entry__c/fields/JSON_Content__c.field-meta.xml
<CustomField>
    <fullName>JSON_Content__c</fullName>
    <description>Full JSON content of the .gs.json config data file. Maximum 131,072 characters.</description>
    <label>JSON Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>