Doc/force-app/main/default/objects/SKU_Config_Staging_Entry__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>Display name of the record being changed. Used in the generated file name for the .gs.json file.</description>
    <label>Record Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>